2025-06-21T01:47:30Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15790823242 # 1051
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-21
* notice: last 14d: unq all: 53 109
* notice: prev accum: outdated-unq outdated-all / unq all: 4259 8991 / 4339 9098
* notice: next accum: outdated-unq outdated-all / unq all: 4266 9000 / 4347 9109
* notice: prev exec diff / last date diff / accum: unq all: +8 +11 -0 -0 / +9 +12 -0 -0 / 9 12
* notice: removed / changed dates: [2025-06-06] / [2025-06-20]

2025-06-20T12:44:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15779235504 # 1050
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-20
* notice: last 14d: unq all: 55 107
* notice: prev accum: outdated-unq outdated-all / unq all: 4259 8991 / 4338 9097
* notice: next accum: outdated-unq outdated-all / unq all: 4259 8991 / 4339 9098
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-06-20]

2025-06-20T01:49:28Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15769448732 # 1049
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-20
* notice: last 14d: unq all: 55 106
* notice: prev accum: outdated-unq outdated-all / unq all: 4259 8991 / 4329 9082
* notice: next accum: outdated-unq outdated-all / unq all: 4259 8991 / 4338 9097
* notice: prev exec diff / last date diff / accum: unq all: +9 +15 -0 -0 / +10 +16 -0 -0 / 10 16
* notice: removed / changed dates: [] / [2025-06-19]

2025-06-19T12:44:59Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15758177512 # 1048