@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-06-08T01:57:01Z",
-  "count" : 7,
-  "count_minmax" : [ 7, 7 ],
-  "count_decinc" : [ -0, +7 ],
-  "uniques" : 5,
-  "uniques_minmax" : [ 5, 5 ],
-  "uniques_decinc" : [ -0, +5 ]
+  "timestamp" : "2025-06-21T12:40:04Z",
+  "count" : 4,
+  "count_minmax" : [ 4, 7 ],
+  "count_decinc" : [ -3, +7 ],
+  "uniques" : 3,
+  "uniques_minmax" : [ 3, 5 ],
+  "uniques_decinc" : [ -2, +5 ]
 }
