@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-06-21T01:47:30Z",
+  "timestamp" : "2025-06-21T12:40:04Z",
   "count_outdated" : 9000,
   "uniques_outdated" : 4266,
-  "count" : 9109,
-  "uniques" : 4347,
+  "count" : 9110,
+  "uniques" : 4348,
   "clones" : [
     {
       "timestamp": "2025-06-07T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 7, 7 ],
-      "count_decinc": [ 0, 7 ],
-      "uniques": 5,
-      "uniques_minmax": [ 5, 5 ],
-      "uniques_decinc": [ 0, 5 ]
+      "count": 4,
+      "count_minmax": [ 4, 7 ],
+      "count_decinc": [ 3, 7 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 5 ],
+      "uniques_decinc": [ 2, 5 ]
     },
     {
       "timestamp": "2025-06-08T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 9,
       "uniques_minmax": [ 1, 9 ],
       "uniques_decinc": [ 0, 9 ]
+    },
+    {
+      "timestamp": "2025-06-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
