@@ -1,11 +1,11 @@
 {
-  "count": 109,
-  "uniques": 53,
+  "count": 107,
+  "uniques": 52,
   "clones": [
     {
       "timestamp": "2025-06-07T00:00:00Z",
-      "count": 7,
-      "uniques": 5
+      "count": 4,
+      "uniques": 3
     },
     {
       "timestamp": "2025-06-08T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2025-06-20T00:00:00Z",
       "count": 12,
       "uniques": 9
+    },
+    {
+      "timestamp": "2025-06-21T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
